// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render a disabled select that allows empty value 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test select
  </OrizzonteFilterCaption>
  <select
    className="orizzonte__filter-select orizzonte__filter-select--disabled"
    disabled={true}
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      None
    </option>
    <option
      key="1.0"
      value={1}
    >
      Test value 1
    </option>
    <option
      key="2.1"
      value={2}
    >
      Test value 2
    </option>
    <option
      key="3.2"
      value={3}
    >
      Test value 3
    </option>
  </select>
</div>
`;

exports[`<Select /> should render a grouped select with some options that only have values and no labels 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test select
  </OrizzonteFilterCaption>
  <select
    className="orizzonte__filter-select"
    disabled={false}
    onChange={[Function]}
    value={3}
  >
    <option
      key="fallback_label_0.0"
      value="fallback_label_0"
    >
      fallback_label_0
    </option>
    <optgroup
      key="Grouped values.1"
      label="Grouped values"
    >
      <option
        key="fallback_label_1.1.0"
        value="fallback_label_1"
      >
        fallback_label_1
      </option>
      <option
        key="3.1.1"
        value={3}
      >
        Test value 3
      </option>
    </optgroup>
    <option
      key="4.2"
      value={4}
    >
      Test value 4
    </option>
  </select>
</div>
`;

exports[`<Select /> should render a normal select 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test select
  </OrizzonteFilterCaption>
  <select
    className="orizzonte__filter-select"
    disabled={false}
    onChange={[Function]}
    value=""
  >
    <option
      key="1.0"
      value={1}
    >
      Test value 1
    </option>
    <option
      key="2.1"
      value={2}
    >
      Test value 2
    </option>
    <option
      key="3.2"
      value={3}
    >
      Test value 3
    </option>
  </select>
</div>
`;

exports[`<Select /> should render a select a group that has no children 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test select
  </OrizzonteFilterCaption>
  <select
    className="orizzonte__filter-select"
    disabled={false}
    onChange={[Function]}
    value={1}
  >
    <option
      key="1.0"
      value={1}
    >
      Test value 1
    </option>
  </select>
</div>
`;

exports[`<Select /> should render a select with selected value 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Test select
  </OrizzonteFilterCaption>
  <select
    className="orizzonte__filter-select"
    disabled={false}
    onChange={[Function]}
    value={3}
  >
    <option
      key="1.0"
      value={1}
    >
      Test value 1
    </option>
    <option
      key="2.1"
      value={2}
    >
      Test value 2
    </option>
    <option
      key="3.2"
      value={3}
    >
      Test value 3
    </option>
  </select>
</div>
`;
